# example-voting-app

./: .gitignore  README.md  docker-compose.yml  docker-compose_wasm.yml
result/: Cargo.toml  Dockerfile  commands.md
result/client/: app.js
result/src/: main.rs
result_wasm/: Cargo.toml  Dockerfile  commands.md
result_wasm/client/: app.js
result_wasm/src/: main.rs
