[package]
name = "result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

tokio = { version = "1.34", features = [ "io-util", "fs", "net", "time", "rt", "macros"] }
tokio-postgres = "0.7.10"
hyper = { version = "0.14.27", features = ["full"] }
